adding X as close within popup portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,7 @@
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()">
         <span class="popuptext" id="myPopup">
+          <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
           <p class="textforpopup">2020 - present | Visual &amp; UX/UI design for BLG Beyond - alternative legal services</p>
 		  </span>
@@ -74,6 +75,7 @@
 <td class="threebythreegrid">
   <div class="popuptwo" onclick="myFunctiontwo()">
     <span class="popuptexttwo" id="myPopuptwo">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop">
       <p class="textforpopup">2022 | Visual &amp; UX/UI design for BLG Merchandise Store - client retail portal</p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
@@ -83,6 +85,7 @@
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
   <div class="popupthree" onclick="myFunctionthree()">
     <span class="popuptextthree" id="myPopupthree">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2021 | Product design for BLG Google Campaign; includes UX UI and web form creation</p>
       </span>
@@ -97,6 +100,7 @@
     <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
       <div class="popupfour" onclick="myFunctionfour()">
         <span class="popuptextfour" id="myPopupfour">
+          <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
           </span>
@@ -107,6 +111,7 @@
 <td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
   <div class="popupfive" onclick="myFunctionfive()">
     <span class="popuptextfive" id="myPopupfive">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
       </span>
@@ -117,6 +122,7 @@
 <td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
   <div class="popupsix" onclick="myFunctionsix()">
     <span class="popuptextsix" id="myPopupsix">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP) - HTML &amp; CSS</p>
       </span>
@@ -131,6 +137,7 @@
     <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
       <div class="popupseven" onclick="myFunctionseven()">
         <span class="popuptextseven" id="myPopupseven">
+          <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2017 - 2020 | Digital designer at BBlake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
           </span>
@@ -141,6 +148,7 @@
 <td class="threebythreegrid" style="background: #1b0000;  border: 5px solid #ffffff;">
   <div class="popup8" onclick="myFunction8()">
     <span class="popuptext8" id="myPopup8">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2016 | Design Manager for Thinkway Toys - Consumer Products &amp; Packaging Design Manager</p>
       </span>
@@ -150,6 +158,7 @@
 <td class="threebythreegrid" style="background: #FFB6C1;  border: 5px solid #ffffff;">
   <div class="popup9" onclick="myFunction9()">
     <span class="popuptext9" id="myPopup9">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2013 - 2016 | Consumer Product Approval for Disney Canada<br>Formerly Online Product Approval (OPA) Associate, Design | See previous slide - while <br>working at Disney Canada, my design got chosen for a graphic T-shirt to be sold at Uniqlo.
         </p>
@@ -165,6 +174,7 @@
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup10" onclick="myFunction10()">
         <span class="popuptext10" id="myPopup10">
+          <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2013 - 2016 | Consumer Product Approval for Disney Canada<br>Formerly Online Product Approval (OPA) Associate, Design</p>
           </span>
@@ -175,6 +185,7 @@
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
   <div class="popup11" onclick="myFunction11()">
     <span class="popuptext11" id="myPopup11">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2012 - 2013 | Consumer Products for Dolce &amp; Gabbana <br>Intern in Milan office</p>
       </span>
@@ -185,6 +196,7 @@
 <td class="threebythreegrid" style="background: #add8e6;  border: 5px solid #ffffff;">
   <div class="popup12" onclick="myFunction12()">
     <span class="popuptext12" id="myPopup12">
+      <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2010 | Desktop Publisher for National Bank Financial - Institutional Equities</p>
       </span>
@@ -199,6 +211,7 @@
     <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
       <div class="popup13" onclick="myFunction13()">
         <span class="popuptext13" id="myPopup13">
+          <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2010 | Consumer Product Designer and Fashion Designer for Mred Clothing Label</p>
           </span>
