--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
-    <title>Edwin Au</title>
+    <title>Edwin Au Portfolio Page</title>
 
   </head>
 <body style="overflow-x: hidden;">
