--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;F.C.&nbsp;AU</a></h1><br>
+        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1><br>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
 		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
@@ -180,7 +180,8 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 				<center>
     				<div id="labtopresumewidth">
 						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
-						<div id="resume_movement" style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a>
+						<div style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank">
+              <img class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Download PDF" ></a>
 						</div>
 					</div>
 				</center>
