--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           </ul>
       </div>
 
-  <p class="resume-prompt ipad displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
+  <p class="ipad displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
 
-  <p class="resume-prompt imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
+  <p class="imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
 
     <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
