--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <link href="stylesheet/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway|Cabin+Sketch|Pacifico" rel="stylesheet">
     <link href="stylesheet/reset.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link href="stylesheet/marbWhite_portfolio.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
@@ -21,7 +22,6 @@
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <title>Edwin Au Portfolio Page</title>
-
   </head>
 <body style="overflow-x: hidden;">
 <!-- <div class="carolcarolcon Desktop"> -->
@@ -66,7 +66,10 @@
         <span class="popuptext" id="myPopup">
           <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
-          <p class="textforpopup">2020 - present | Visual &amp; UX/UI design for BLG Beyond - alternative legal services</p>
+          <p class="titleforpopup">2020 | Visual design for BLG Beyond Legal Services webpage launch</p>
+          <p class="textforpopup">My clients requested a dynamic motion banner that showcases animation and innovation for the newly launched suite of alternative legal services.  The result was a dynamic banner using CSS and HTML that is visually impactful while maintaining a fast page load&nbsp;speed.<br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
+          </p>
 		  </span>
         <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.95;">
       </div>
@@ -77,7 +80,9 @@
     <span class="popuptexttwo" id="myPopuptwo">
       <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop">
-      <p class="textforpopup">2022 | Visual &amp; UX/UI design for BLG Merchandise Store - client retail portal</p></span>
+      <p class="titleforpopup">2022 | Visual &amp; UX/UI design for BLG Merchandise Store</p>
+      <p class="textforpopup">Product Design for Client Portal - BLG Merchandise store<br><br>
+        <i class="fa fa-link" aria-hidden="true"></i>&nbsp;<a href="" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
   </div>
 </td>
@@ -87,7 +92,8 @@
     <span class="popuptextthree" id="myPopupthree">
       <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2021 | Product design for BLG Google Campaign; includes UX UI and web form creation</p>
+        <p class="titleforpopup">2021 | product design for BLG Google Campaign</p>
+        <p class="textforpopup">Product Design for Client Portal - BLG Merchandise store<br><br></p>
       </span>
         <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
       </div>
@@ -97,16 +103,19 @@
 
 <table class="threecoloumntables">
   <tr>
-    <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
-      <div class="popupfour" onclick="myFunctionfour()">
-        <span class="popuptextfour" id="myPopupfour">
+
+    <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
+      <div class="popup14" onclick="myFunction14()">
+        <span class="popuptext14" id="myPopup14">
           <span class="close-btn-xy">&times;</span>
-          <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
-            <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
+          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(.5);">
+            <p class="textforpopup">2023 | BLG - Visual social to webpage here</p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
+          <center>
+        <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; transform: scale(1.9); padding-bottom: 15%; opacity: 0.8;">
+        </center>
       </div>
-  </td>
+    </td>
 
 <td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
   <div class="popupfive" onclick="myFunctionfive()">
@@ -119,16 +128,17 @@
   </div>
 </td>
 
-<td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
-  <div class="popupsix" onclick="myFunctionsix()">
-    <span class="popuptextsix" id="myPopupsix">
+<td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
+  <div class="popupfour" onclick="myFunctionfour()">
+    <span class="popuptextfour" id="myPopupfour">
       <span class="close-btn-xy">&times;</span>
-      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP) - HTML &amp; CSS</p>
+      <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
       </span>
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
-        </div>
-    </td>
+    <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
+  </div>
+</td>
+
   </tr>
 </table>
 
@@ -139,7 +149,7 @@
         <span class="popuptextseven" id="myPopupseven">
           <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
-            <p class="textforpopup">2017 - 2020 | Digital designer at BBlake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
+            <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
       </div>
@@ -219,11 +229,15 @@
       </div>
   </td>
 
-<td class="threebythreegrid" >
-
-</td>
-<td class="threebythreegrid" >
-
+<td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
+  <div class="popupsix" onclick="myFunctionsix()">
+    <span class="popuptextsix" id="myPopupsix">
+      <span class="close-btn-xy">&times;</span>
+      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP) - HTML &amp; CSS</p>
+      </span>
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
+        </div>
     </td>
   </tr>
 </table>
