added rocket gif and more

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
       <div class="popup14" onclick="myFunction14()">
         <span class="popuptext14" id="myPopup14">
           <span class="close-btn-xy">&times;</span>
-          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(.5);">
+          <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
             <p class="textforpopup">2023 | BLG - Visual social to webpage here</p>
           </span>
           <center>
@@ -128,14 +128,14 @@
   </div>
 </td>
 
-<td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
-  <div class="popupfour" onclick="myFunctionfour()">
-    <span class="popuptextfour" id="myPopupfour">
+<td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
+  <div class="popupseven" onclick="myFunctionseven()">
+    <span class="popuptextseven" id="myPopupseven">
       <span class="close-btn-xy">&times;</span>
-      <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
+      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
       </span>
-    <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
+    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
   </div>
 </td>
 
@@ -144,16 +144,7 @@
 
 <table class="threecoloumntables">
   <tr>
-    <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
-      <div class="popupseven" onclick="myFunctionseven()">
-        <span class="popuptextseven" id="myPopupseven">
-          <span class="close-btn-xy">&times;</span>
-          <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
-            <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
-          </span>
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
-      </div>
-  </td>
+
 
 <td class="threebythreegrid" style="background: #1b0000;  border: 5px solid #ffffff;">
   <div class="popup8" onclick="myFunction8()">
@@ -176,6 +167,18 @@
       <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
     </div>
     </td>
+
+    <td class="threebythreegrid" style="background: #00B5E2;  border: 5px solid #ffffff;">
+      <div class="popup15" onclick="myFunction15()">
+        <span class="popuptext15" id="myPopup15">
+          <span class="close-btn-xy">&times;</span>
+          <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
+            <p class="titleforpopup">2022 | LinkedIn post for BLG Beyond Legal Talent recruitment
+            </p>
+          </span>
+          <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.9; transform: scale(1.9); padding-bottom: 15%; padding-left: 5%;">
+        </div>
+      </td>
   </tr>
 </table>
 
@@ -239,6 +242,18 @@
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
         </div>
     </td>
+
+    <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
+      <div class="popupfour" onclick="myFunctionfour()">
+        <span class="popuptextfour" id="myPopupfour">
+          <span class="close-btn-xy">&times;</span>
+          <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
+            <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
+          </span>
+        <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
+      </div>
+    </td>
+
   </tr>
 </table>
 
