More popup phone text margins and paddings formatting

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 
 <table class="threecoloumntables" style="margin-top: 25px;">
   <tr>
-    <td class="threebythreegrid hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible;">
+    <td class="threebythreegrid hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible; z-index:10;">
       <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
           <label class="menu__btn" for="menu__toggle" style="top: 30%;">
@@ -66,7 +66,7 @@
         <span class="popuptext" id="myPopup">
           <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
-          <p class="titleforpopup">2020 | Visual design for BLG Beyond Legal Services webpage launch</p>
+          <p class="titleforpopup">2020 | Visual design for BLG Beyond Legal Services</p>
           <p class="textforpopup">My clients requested a dynamic motion banner that showcases animation and innovation for the newly launched suite of alternative legal services.  The result was a dynamic banner using CSS and HTML that is visually impactful while maintaining a fast page load&nbsp;speed.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
           </p>
