hamburger fixed and sticky

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     <td class="threebythreegrid hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible; z-index:10;">
       <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle" style="top: 30%;">
+          <label class="menu__btn" for="menu__toggle">
             <span></span>
           </label>
 
@@ -44,8 +44,12 @@
       </div>
     </td>
     <td style="width: 700px; vertical-align: top; align">
-      <p class="resume-prompt"><span style="color: #666666; font-size: 13pt;">Welcome to my portfolio page</span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
-        <span style="text-decoration: underline; color: blue;">inquire</span></a> within</p>
+      <p class="resume-prompt"><span style="color: #666666; font-size: 13pt;">
+        <a href="https://edwinau.github.io/edwin-landing/index.html" style="color: black; text-decoration: none;" target="_blank">
+          Welcome to my portfolio page
+        </a>
+      </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
+      <span style="text-decoration: underline; color: blue;">inquire</span></a> within</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
