--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <title>Edwin Au Homepage</title>
-
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
   </head>
-
   <body>
 
 
@@ -40,7 +36,7 @@
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon">Contact me</a></li>
           </ul>
-      </div>
+    </div>
 
   <p class="ipad displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">
     <a href="https://edwinau.github.io/edwin-landing/portfolio.html" style="color: #666666; text-decoration: none;" target="_blank">
@@ -48,7 +44,11 @@
     </a>
   </p>
 
-  <p class="imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
+  <p class="imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">
+    <a href="https://edwinau.github.io/edwin-landing/portfolio.html" style="color: #666666; text-decoration: none;" target="_blank">
+      Welcome to my page
+    </a>
+  </p>
 
     <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
