index page scroll refine

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
       <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop">
       <p class="titleforpopup">2022 | Visual design for BLG Merchandise Store</p>
-      <p class="textforpopup">Visual design for BLG Client and Internel Portal - BLG Merchandise store<br>
+      <p class="textforpopup">Visual design for BLG Client and Staff Portal - BLG Merchandise store<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blacksheepshop.net/blg/" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
   </div>
