Added Phone Scroll Experience on CV section

--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,9 @@
     <span class="popuptextseven" id="myPopupseven">
       <span class="close-btn-xy">&times;</span>
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
+        <p class="titleforpopup">2017 - 2020 | Digital designer at Blakes (Blake , Cassels and Graydon LLP)</p>
+        <p class="textforpopup">Event Digital Invitation for Margaret Atwood.</p>
+
       </span>
     <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
   </div>
