added portfolio next and previous arrows

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()">
         <span class="popuptext" id="myPopup">
-          <span class="close-btn-xy">&times;</span>
+          <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&rsaquo;</span><span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&lsaquo;</span>
           <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
           <p class="titleforpopup">2020 | Visual and experience design for BLG BEYOND Legal Services</p>
           <p class="textforpopup">My clients required a dynamic motion banner that animates and demonstrates innovation for the newly launched suite of alternative legal services.  The result was a dynamic banner using CSS & HTML that is impactful while maintaining a fast load&nbsp;speed.<br>
@@ -82,7 +82,7 @@
 <td class="threebythreegrid">
   <div class="popuptwo" onclick="myFunctiontwo()">
     <span class="popuptexttwo" id="myPopuptwo">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&rsaquo;</span><span class="portfolionexttwo popup" onclick="myFunction()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop">
       <p class="titleforpopup">2022 | Visual design for BLG Merchandise Store</p>
       <p class="textforpopup">Visual design for BLG Client and Staff Portal - BLG Merchandise store<br>
@@ -94,7 +94,7 @@
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
   <div class="popupthree" onclick="myFunctionthree()">
     <span class="popuptextthree" id="myPopupthree">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup14" onclick="myFunction14()">&rsaquo;</span><span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop">
         <p class="titleforpopup">2021 | product design for BLG Google Campaign</p>
         <p class="textforpopup">Visual design for Client Portal - BLG Merchandise store<br><br></p>
@@ -111,7 +111,7 @@
     <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
       <div class="popup14" onclick="myFunction14()">
         <span class="popuptext14" id="myPopup14">
-          <span class="close-btn-xy">&times;</span>
+          <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&rsaquo;</span><span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&lsaquo;</span>
           <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
             <p class="textforpopup">2023 | BLG - Visual social to webpage here</p>
           </span>
@@ -124,7 +124,8 @@
 <td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
   <div class="popupfive" onclick="myFunctionfive()">
     <span class="popuptextfive" id="myPopupfive">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&rsaquo;</span>
+      <span class="portfolionexttwo popup14" onclick="myFunction14()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
       </span>
@@ -135,10 +136,10 @@
 <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
   <div class="popupseven" onclick="myFunctionseven()">
     <span class="popuptextseven" id="myPopupseven">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup8" onclick="myFunction8()">&rsaquo;</span><span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
         <p class="titleforpopup">2017 - 2020 | Digital designer at Blakes (Blake , Cassels and Graydon LLP)</p>
-        <p class="textforpopup">Event Digital Invitation for Margaret Atwood.</p>
+        <p class="textforpopup">Event Digital Invitation for Blakes Madness.</p>
 
       </span>
     <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
@@ -155,7 +156,7 @@
 <td class="threebythreegrid" style="background: #1b0000;  border: 5px solid #ffffff;">
   <div class="popup8" onclick="myFunction8()">
     <span class="popuptext8" id="myPopup8">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup9" onclick="myFunction9()">&rsaquo;</span><span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2016 | Design Manager for Thinkway Toys - Consumer Products &amp; Packaging Design Manager</p>
       </span>
@@ -165,7 +166,7 @@
 <td class="threebythreegrid" style="background: #FFB6C1;  border: 5px solid #ffffff;">
   <div class="popup9" onclick="myFunction9()">
     <span class="popuptext9" id="myPopup9">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup15" onclick="myFunction15()">&rsaquo;</span><span class="portfolionexttwo popup8" onclick="myFunction8()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2013 - 2016 | Consumer Product Approval for Disney Canada<br>Formerly Online Product Approval (OPA) Associate, Design | See previous slide - while <br>working at Disney Canada, my design got chosen for a graphic T-shirt to be sold at Uniqlo.
         </p>
@@ -177,7 +178,7 @@
     <td class="threebythreegrid" style="background: #00B5E2;  border: 5px solid #ffffff;">
       <div class="popup15" onclick="myFunction15()">
         <span class="popuptext15" id="myPopup15">
-          <span class="close-btn-xy">&times;</span>
+          <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup10" onclick="myFunction10()">&rsaquo;</span><span class="portfolionexttwo popup9" onclick="myFunction9()">&lsaquo;</span>
           <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
             <p class="titleforpopup">2022 | LinkedIn post for BLG Beyond Legal Talent recruitment
             </p>
@@ -193,6 +194,7 @@
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup10" onclick="myFunction10()">
         <span class="popuptext10" id="myPopup10">
+        <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup11" onclick="myFunction11()">&rsaquo;</span><span class="portfolionexttwo popup15" onclick="myFunction15()">&lsaquo;</span>
           <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2013 - 2016 | Consumer Product Approval for Disney Canada<br>Formerly Online Product Approval (OPA) Associate, Design</p>
@@ -204,7 +206,7 @@
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
   <div class="popup11" onclick="myFunction11()">
     <span class="popuptext11" id="myPopup11">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup12" onclick="myFunction12()">&rsaquo;</span><span class="portfolionexttwo popup10" onclick="myFunction10()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2012 - 2013 | Consumer Products for Dolce &amp; Gabbana <br>Intern in Milan office</p>
       </span>
@@ -215,7 +217,7 @@
 <td class="threebythreegrid" style="background: #add8e6;  border: 5px solid #ffffff;">
   <div class="popup12" onclick="myFunction12()">
     <span class="popuptext12" id="myPopup12">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup13" onclick="myFunction13()">&rsaquo;</span><span class="portfolionexttwo popup11" onclick="myFunction11()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2010 | Desktop Publisher for National Bank Financial - Institutional Equities</p>
       </span>
@@ -230,7 +232,7 @@
     <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
       <div class="popup13" onclick="myFunction13()">
         <span class="popuptext13" id="myPopup13">
-          <span class="close-btn-xy">&times;</span>
+          <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&rsaquo;</span><span class="portfolionexttwo popup12" onclick="myFunction12()">&lsaquo;</span>
           <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2010 | Consumer Product Designer and Fashion Designer for Mred Clothing Label</p>
           </span>
@@ -241,7 +243,7 @@
 <td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
   <div class="popupsix" onclick="myFunctionsix()">
     <span class="popuptextsix" id="myPopupsix">
-      <span class="close-btn-xy">&times;</span>
+      <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&rsaquo;</span><span class="portfolionexttwo popup13" onclick="myFunction13()">&lsaquo;</span>
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
         <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP) - HTML &amp; CSS</p>
       </span>
@@ -252,6 +254,7 @@
     <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
       <div class="popupfour" onclick="myFunctionfour()">
         <span class="popuptextfour" id="myPopupfour">
+        <span class="close-btn-xy">&times;</span><span class="portfolionexttwo popup" onclick="myFunction()">&rsaquo;</span><span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&lsaquo;</span>
           <span class="close-btn-xy">&times;</span>
           <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
